--- a/hotel_restoraunt/hotel_restoraunt.csproj
+++ b/hotel_restoraunt/hotel_restoraunt.csproj
@@ -31,8 +31,10 @@
         <Compile Include="Services\HotelService.cs" />
         <Compile Include="Services\Interfaces\IReservationService.cs" />
         <Compile Include="Services\Interfaces\IRoomService.cs" />
+        <Compile Include="Services\Interfaces\IUserService.cs" />
         <Compile Include="Services\ReservationService.cs" />
         <Compile Include="Services\RoomService.cs" />
+        <Compile Include="Services\UserService.cs" />
         <Compile Include="ViewModels\Base\ViewModelBase.cs" />
         <Compile Include="ViewModels\LoginViewModel.cs" />
         <Compile Include="ViewModels\MainViewModel.cs" />
@@ -43,8 +45,12 @@
             <Generator>MSBuild:Compile</Generator>
             <SubType>Designer</SubType>
         </ApplicationDefinition>
-        <Compile Include="ViewModels\MainWindow.xaml.cs" />
-        <Compile Include="View\LoginView.xaml.cs" />
+        <Compile Include="ViewModels\ReservationViewModel.cs" />
+        <Compile Include="ViewModels\RoomViewModel.cs" />
+        <Compile Include="Views\LoginView.xaml.cs" />
+        <Compile Include="Views\MainWindow.xaml.cs" />
+        <Compile Include="Views\ReservationView.xaml.cs" />
+        <Compile Include="Views\RoomView.xaml.cs" />
     </ItemGroup>
 
     <ItemGroup>
@@ -52,19 +58,21 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Page Include="ViewModels\MainWindow.xaml">
+      <Page Include="Views\LoginView.xaml" />
+      <Page Include="Views\MainWindow.xaml">
         <Generator>MSBuild:Compile</Generator>
         <XamlRuntime>Wpf</XamlRuntime>
         <SubType>Designer</SubType>
       </Page>
-      <Page Include="View\LoginView.xaml" />
+      <Page Include="Views\ReservationView.xaml" />
+      <Page Include="Views\RoomView.xaml" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Extensions\" />
       <Folder Include="Services\Implementations\" />
       <Folder Include="Utilities\" />
-      <Folder Include="View\Components\" />
+      <Folder Include="Views\Components\" />
     </ItemGroup>
 
     <ItemGroup>
