--- a/hotel_restoraunt/hotel_restoraunt.csproj
+++ b/hotel_restoraunt/hotel_restoraunt.csproj
@@ -24,11 +24,15 @@
         </Compile>
         <Compile Include="Commands\RelayCommand.cs" />
         <Compile Include="Data\AppDbContext.cs" />
+        <Compile Include="Models\Cleaner.cs" />
         <Compile Include="Models\Enums\RoomType.cs" />
+        <Compile Include="Models\Guest.cs" />
         <Compile Include="Models\Reservation.cs" />
         <Compile Include="Models\User.cs" />
         <Compile Include="Services\DTOs\ReservationDTO.cs" />
+        <Compile Include="Services\GuestService.cs" />
         <Compile Include="Services\HotelService.cs" />
+        <Compile Include="Services\Interfaces\IGuestService.cs" />
         <Compile Include="Services\Interfaces\IReservationService.cs" />
         <Compile Include="Services\Interfaces\IRoomService.cs" />
         <Compile Include="Services\Interfaces\IUserService.cs" />
@@ -36,7 +40,9 @@
         <Compile Include="Services\RoomService.cs" />
         <Compile Include="Services\UserService.cs" />
         <Compile Include="ViewModels\Base\ViewModelBase.cs" />
+        <Compile Include="ViewModels\GuestViewModel.cs" />
         <Compile Include="ViewModels\LoginViewModel.cs" />
+        <Compile Include="ViewModels\MainMenuViewModel.cs" />
         <Compile Include="ViewModels\MainViewModel.cs" />
         <Compile Include="Models\Room.cs" />
 
@@ -47,10 +53,14 @@
         </ApplicationDefinition>
         <Compile Include="ViewModels\ReservationViewModel.cs" />
         <Compile Include="ViewModels\RoomViewModel.cs" />
+        <Compile Include="ViewModels\UserViewModel.cs" />
+        <Compile Include="Views\GuestView.xaml.cs" />
         <Compile Include="Views\LoginView.xaml.cs" />
+        <Compile Include="Views\MainMenuView.xaml.cs" />
         <Compile Include="Views\MainWindow.xaml.cs" />
         <Compile Include="Views\ReservationView.xaml.cs" />
         <Compile Include="Views\RoomView.xaml.cs" />
+        <Compile Include="Views\UserView.xaml.cs" />
     </ItemGroup>
 
     <ItemGroup>
@@ -58,7 +68,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Page Include="Views\GuestView.xaml" />
       <Page Include="Views\LoginView.xaml" />
+      <Page Include="Views\MainMenuView.xaml" />
       <Page Include="Views\MainWindow.xaml">
         <Generator>MSBuild:Compile</Generator>
         <XamlRuntime>Wpf</XamlRuntime>
@@ -66,6 +78,7 @@
       </Page>
       <Page Include="Views\ReservationView.xaml" />
       <Page Include="Views\RoomView.xaml" />
+      <Page Include="Views\UserView.xaml" />
     </ItemGroup>
 
     <ItemGroup>
