--- a/hotel_restoraunt/hotel_restoraunt.csproj
+++ b/hotel_restoraunt/hotel_restoraunt.csproj
@@ -23,7 +23,8 @@
             <DependentUpon>App.xaml</DependentUpon>
         </Compile>
         <Compile Include="Commands\RelayCommand.cs" />
-        <Compile Include="Data\AppDbContext.cs" />
+        <Compile Include="Data\DatabaseHelper.cs" />
+        <Compile Include="Data\Repositories\HotelRoomRepository.cs" />
         <Compile Include="Models\Booking.cs" />
         <Compile Include="Models\Cleaner.cs" />
         <Compile Include="Models\Enums\RoomType.cs" />
@@ -48,7 +49,7 @@
         <Compile Include="ViewModels\LoginViewModel.cs" />
         <Compile Include="ViewModels\MainMenuViewModel.cs" />
         <Compile Include="ViewModels\MainViewModel.cs" />
-        <Compile Include="Models\Room.cs" />
+        <Compile Include="Models\HotelRoom.cs" />
 
         <!-- WPF ресурси -->
         <ApplicationDefinition Include="App.xaml">
@@ -103,6 +104,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+      <PackageReference Include="MySql.Data" Version="9.3.0" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
     </ItemGroup>
 
