оновлення без меню, але з робочою бд

--- a/hotel_restoraunt/appsettings.json
+++ b/hotel_restoraunt/appsettings.json
@@ -1,9 +1,13 @@
 {
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=kursova;Uid=root;Pwd=;"
+    },
     "Logging": {
         "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
         }
-    }
+    },
+    "AllowedHosts": "*"
 }
